[package]
name = "code-span"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Add additional infomation to code character"
repository = "https://github.com/oovm/color-rs"
documentation = "https://docs.rs/code-span"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["*.json"]

[dependencies]
itertools = "0.10.5"
arc-interner = "0.7.0"
lsp-document = { version = "0.6.0", features = [] }
indexmap = { version = "1.9.2", features = ["serde"] }
serde = { version = "1.0.147", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.89"

[features]
default = []
