[package]
name = "color-span"
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Color shared definition"
repository = "https://github.com/oovm/dyeware"
documentation = "https://docs.rs/color-span"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"
exclude = ["*.json"]

[dependencies]
serde = { version = "1.0.148", features = ["derive"] }
indexmap = { version = "1.9.2", features = ["serde"] }
internship = "0.6.0"

[dependencies.code-span]
#version = "0.1.0"
path = "../code-span"

[dev-dependencies]
serde_json = "1.0.89"

[features]
default = []
