[package]
name = "dye-from"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/dyeware"
documentation = "https://docs.rs/dye-from"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
log = "0.4.17"
tl = { version = "0.7.7", features = ["simd"] }
regex = "1.7.0"

[dependencies.diagnostic-quick]
version = "0.2.3"
features = ["tl"]

[dependencies.color-span]
#version = "0.0.0"
path = "../color-span"

[dev-dependencies]

[features]
default = ["highlightjs"]
highlightjs = []
